fix: arrow collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -27,16 +27,16 @@
     }
 
     .arrow-collapse {
-      padding-right: 10px;
-      transition: transform 0.5s ease-in-out;
-      transform: rotate(-180deg);
+      padding: 0px 10px;
+      transition: transform 0.3s ease-in-out;
+      transform-origin: center;
 
       &:hover {
         cursor: pointer;
       }
     }
     &.open img{
-      transform: rotate(180deg);
+      transform: rotate(-180deg);
     }
   }
 
